# zoom-assistant

./: .envrc.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/zoom_assistant/: cli.py  config.py  gemini.py  image.py  markdown.py
src/zoom_assistant/notes_ocr/: pipeline.py  schema.py  walker.py
tests/: test_cli.py  test_config.py  test_gemini.py  test_image.py  test_markdown.py  test_notes_ocr_pipeline.py  test_notes_ocr_schema.py  test_notes_ocr_walker.py  test_smoke.py
